--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>https://teambit.io/</title>
+        <link rel="stylesheet" href="public/css/app.css">
     </head>
     <body>
+        <header>
+            <div class="header_left">
 
+            </div>
+            <div class="header_right">
+                <a href="#">Pricing</a>
+                <a href="#">Blog</a>
+                <a href="#">Sing in</a>
+            </div>
+        </header>
     </body>
 </html>
