--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
         <header>
             <div class="header_left">
-
+                <span><img src="img/logosmile.png" alt="logo"></span>
+                <a href="#">Teambit</a>
             </div>
             <div class="header_right">
                 <a href="#">Pricing</a>
