--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
                 <a href="#">Teambit</a>
             </div>
             <div class="header_right">
+                <select class="" name="Solution">
+                    <option value="Solution">Solution</option>
+                    <option value="Feedback">Feedback</option>
+                    <option value="Surveys">Surveys</option>
+                    <option value="Reviews">Reviews</option>
+                    <option value="Praise">Praise</option>
+                </select>
                 <a href="#">Pricing</a>
                 <a href="#">Blog</a>
                 <a href="#">Sing in</a>
