working on header

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     </head>
     <body>
         <header>
-            <div class="header_left">
+            <div class="header_left left">
                 <span><img src="img/logosmile.png" alt="logo"></span>
                 <a href="#">Teambit</a>
             </div>
-            <div class="header_right">
-                <select class="" name="Solution">
+            <div class="header_right right">
+                <a href="#"><select class="" name="Solution">
                     <option value="Solution">Solution</option>
                     <option value="Feedback">Feedback</option>
                     <option value="Surveys">Surveys</option>
                     <option value="Reviews">Reviews</option>
                     <option value="Praise">Praise</option>
-                </select>
+                </select></a>
                 <a href="#">Pricing</a>
                 <a href="#">Blog</a>
                 <a href="#">Sing in</a>
