--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
         <link rel="stylesheet" href="public/css/app.css">
     </head>
     <body>
-        <header>
-            <div class="header_left left">
-                <span><img src="img/logosmile.png" alt="logo"></span>
-                <a href="#">Teambit</a>
-            </div>
-            <div class="header_right right">
-                <a href="#"><select class="" name="Solution">
-                    <option value="Solution">Solution</option>
-                    <option value="Feedback">Feedback</option>
-                    <option value="Surveys">Surveys</option>
-                    <option value="Reviews">Reviews</option>
-                    <option value="Praise">Praise</option>
-                </select></a>
-                <a href="#">Pricing</a>
-                <a href="#">Blog</a>
-                <a href="#">Sing in</a>
-            </div>
-        </header>
+        <div class="container">
+            <header>
+                <div class="header_left left">
+                    <span><img src="img/logosmile.png" alt="logo"></span>
+                    <a href="#">Teambit</a>
+                    </div>
+                <div class="header_right right">
+                    <a href="#"><select class="" name="Solution">
+                        <option value="Solution">Solution</option>
+                        <option value="Feedback">Feedback</option>
+                        <option value="Surveys">Surveys</option>
+                        <option value="Reviews">Reviews</option>
+                        <option value="Praise">Praise</option>
+                    </select></a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Sing in</a>
+                    <a href="#">
+                        <button type="button" name="button">
+                            <span class="left">
+                                <img src="img/logogoogle.png" alt="logo">
+                            </span>
+                            <span class="right">Sing up<span>
+                        </button>
+                    </a>
+                </div>
+            </header>
+        </div>
     </body>
 </html>
