--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>https://teambit.io/</title>
+        <script src="https://kit.fontawesome.com/1e3e5f2200.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="public/css/app.css">
     </head>
     <body>
@@ -31,8 +32,41 @@
                             <span class="right">Sing up<span>
                         </button>
                     </a>
-                </div>
+                </div>    <!-- chiusura div header_right -->
             </header>
-        </div>
+            <main>
+                <section class="left">
+                    <h1>Understand, recognize and develop your people</h1>
+                    <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+                    <a href="#">
+                        <button type="button" name="button">
+                            <span class="left">
+                                <img src="img/logogoogle.png" alt="logo">
+                            </span>
+                            <span class="right">Sing up with Google<span>
+                        </button>
+                    </a>
+                    or
+                    <a href="#">
+                        <button type="button" name="button">
+                            <span class="left">
+                                <img src="img/logoslack.png" alt="logo">
+                            </span>
+                            <span class="right">Sing up with Slack<span>
+                        </button>
+                    </a>
+                    <a href="#" class="left">
+                        or use your email address
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
+
+                </section>
+                <section class="sfondo right">
+                </section>
+            </main>
+            <footer>
+
+            </footer>
+        </div>    <!-- chiusura div conteiner -->
     </body>
 </html>
