inizio footer macro leyout

--- a/index.html
+++ b/index.html
@@ -65,7 +65,24 @@
                 </section>
             </main>
             <footer>
+                <div class="primo">
 
+                </div>
+                <div class="tab">
+
+                </div>
+                <div class="tab">
+
+                </div>
+                <div class="tab">
+
+                </div>
+                <div class="tab">
+
+                </div>
+                <div class="tab">
+
+                </div>
             </footer>
         </div>    <!-- chiusura div conteiner -->
     </body>
