--- a/index.html
+++ b/index.html
@@ -66,22 +66,49 @@
             </main>
             <footer>
                 <div class="primo">
-
+                    <img src="img/logosmile.png" alt="logo">
+                    <p>
+                        <a href="#" class="blue">Teambit</a>
+                        helps teams create high performing cultures by making feedback a daily habit.
+                    </p>
                 </div>
                 <div class="tab">
-
+                    <h3>Product</h3>
+                    <a href="#">Feedback</a>
+                    <a href="#">Surveys</a>
+                    <a href="#">Reviews</a>
+                    <a href="#">Praise</a>
+                    <a href="#">Slack Integration</a>
+                    <a href="#">Schedule a demo</a>
+                    <a href="#">Pricing</a>
                 </div>
                 <div class="tab">
-
+                    <h3>About</h3>
+                    <a href="#">About</a>
+                    <a href="#">Terms and privacy</a>
+                    <a href="#">Help Center</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Digest</a>
                 </div>
                 <div class="tab">
-
+                    <h3>Connect</h3>
+                    <a href="#">Contact us</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Linkedin</a>
                 </div>
                 <div class="tab">
-
+                    <h3>Labs</h3>
+                    <a href="#">Manager checklist</a>
+                    <a href="#">Manager assessment</a>
+                    <a href="#">Manager handbook</a>
                 </div>
                 <div class="tab">
-
+                    <h3>From the blog</h3>
+                    <a href="#">How to change your company culture: a four-step framework</a>
+                    <a href="#">How teams can be more productive by killing 8-hour workday</a>
+                    <a href="#">How to build high performing teams inspired by nature</a>
+                    <a href="#">View all <i class="fas fa-arrow-right"></i></a>
                 </div>
             </footer>
         </div>    <!-- chiusura div conteiner -->
