finito section.second

--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
                 <section class="sfondo right">
                 </section>
             </main>
+            <section class="second">
+                <h2>Traditional people processes lead to disengagement and turnover.</h2>
+                <div class="immagini">
+                    <span class="immagine">
+                        <img src="img/carta.png" alt="">
+                        <p>They are hardcore,formal and disconnected</p>
+                    </span>
+                    <span class="immagine">
+                        <img src="img/gattolavagna.png" alt="">
+                        <p>They don't encourage regular feedback</p>
+                    </span>
+                    <span class="immagine">
+                        <img src="img/gattoprigione.png" alt="">
+                        <p>They don't make it safe to speak up</p>
+                    </span>
+                </div>
+                <div class="immaginesotto">
+                    <img src="img/brainstorming.png" alt="">
+                </div>
+            </section>
             <footer>
                 <div class="primo">
                     <img src="img/logosmile.png" alt="logo">
